Overflow box size corrected

--- a/src/App.css
+++ b/src/App.css
@@ -584,7 +584,7 @@ a.github {
   opacity: 0;
   background: var(--primary-black);
   width: 15rem;
-  height: 10rem;
+  height: 8.5rem;
   top: 20px;
   border: 1px solid var(--primary-red);
   cursor: pointer;
